# Indic_ASR

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  colab_benchmark.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: asr_router.py  index_router.py
app/constants/: enums.py  log_msg.py
app/services/: alignment.py  diarization.py  load_model.py  model_registry.py  pipecat_wrapper.py
app/static/: index.html  index_upload.html
app/utils/: logger_utils.py  metrics.py
app/utils/config/: config.py
scripts/: benchmark.py  run_pipecat.py
src/: config.py  logger.py  model_loader.py
src/static/: index.html
