[project]
name = "indic-conformer-asr-testing"
version = "0.1.0"
description = "Indic Conformer ASR Testing API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "transformers",
    "torch",
    "torchaudio",
    "python-multipart",
    "librosa",
    "soundfile",
    "numpy",
    "python-dotenv",
    "onnx",
    "onnxruntime-gpu",
    "datasets",
    "jiwer",
    "pandas",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }